Install Maven, SVN, and Git